@@ -106,8 +106,9 @@ sub convert_dataobj
 
 	# month
 	if ($dataobj->exists_and_set( "date" )) {
-		$dataobj->get_value( "date" ) =~ /^[0-9]{4}-([0-9]{2})/;
-		$data->{bibtex}->{month} = EPrints::Time::get_month_label( $plugin->{session}, $1 ) if $1;
+		if( $dataobj->get_value( "date" ) =~ /^[0-9]{4}-([0-9]{2})/ ) {
+			$data->{bibtex}->{month} = EPrints::Time::get_month_label( $plugin->{session}, $1 );
+		}
 	}
 
 	# note	
